some more cleanup

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1638,8 +1638,8 @@
                 // "--buildinginput",
                 // "--useposembedding",
                 "--sentinelbuildings",
-                "--empty_eps", "0.00",
-                "-dw","2",
+                // "--empty_eps", "0.00",
+                // "-dw","2",
                 "-S2",
                 "-NIR",
                 "-S1",
