requirements and cleanup

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -732,54 +732,54 @@
             "console": "integratedTerminal",
             "justMyCode": false,
             "args": [
-                "-o",
-                "-s",
+                // "-o",
+                // "-s",
                 // "--max_samples", "200",
-                "-e",   "100",
-                "-b", "16",
-                "-lr", "1e-4", 
-                "--model", "POMELO_module", 
-                "--head", "v3",  
-                "--feature_extractor", "DDA",
-                "-l", "log_l1_loss", 
-                "-la", "1.0",
+                // "-e",   "100",
+                // "-b", "16",
+                // "-lr", "1e-4", 
+                // "--model", "POMELO_module", 
+                // "--head", "v3",  
+                // "--feature_extractor", "DDA",
+                // "-l", "log_l1_loss", 
+                // "-la", "1.0",
                 // "--empty_eps", "0.01",
                 "-sreg", "0.01",
-                "-dw","2", 
-                // "-S2",
-                // "-NIR",
+                // "-dw","2", 
+                "-S2",
+                "-NIR",
                 "-S1",
-                "-f",
-                "4",
+                // "-f",
+                // "4",
                 "-rse",
                 "-treg", "rwa", 
                 "-tregtrain", "rwa2022",
-                "-exZH",
-                "-val", "1",
-                "--lr_step", "5",
-                "--lr_gamma", "0.75",
+                // "-exZH",
+                // "-val", "1",
+                // "--lr_step", "5",
+                // "--lr_gamma", "0.75",
                 "--full_aug", 
-                "--num_workers", "6", 
-                "--seed", "1612",
-                "-gc", "0.01",
+                // "--num_workers", "6", 
+                "--seed", "1600",
+                // "-gc", "0.01",
                 // "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1577_622/last_model.pth",
                 // "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_2201_422/last_model.pth",
-                "--supmode", "weaksup",
-                "--lam_weak", "100", 
-                "--nomain", 
-                "--val_every_n_epochs", "1", 
-                "--weak_batch_size", "2", 
+                // "--supmode", "weaksup",
+                // "--lam_weak", "100", 
+                // "--nomain", 
+                // "--val_every_n_epochs", "1", 
+                // "--weak_batch_size", "2", 
                 "--occupancymodel",
                 // "--buildinginput",
                 // "--useposembedding",
-                "--weightdecay", "0.00001",
-                "--weightdecay_unet", "0.00001",
+                // "--weightdecay", "0.00001",
+                // "--weightdecay_unet", "0.00001",
                 "--sentinelbuildings",
                 "--train_level", "coarse",
                 "--pretrained",
-                "--limit1", "9000000",
-                "--limit2", "9000000",
-                "--limit3", "13000000",
+                // "--limit1", "9000000",
+                // "--limit2", "9000000",
+                // "--limit3", "13000000",
                 "--biasinit", "0.9407",
                 // "--dropout", "0.5",
                 // "--addgaussiannoise",
