--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2591,6 +2591,42 @@
                 "--output_folder",
                 "/scratch2/neckert/open_buildings/rwa_rasterized",
             ]
+        },
+        {
+            "name": "train, Stage 1, rwa2022 finetune, neckert, limit_1.2, builtuploss",
+            "type": "python",
+            "request": "launch",
+            "program": "run_train.py",
+            "console": "integratedTerminal",
+            "justMyCode": false,
+            "args": [
+                "-S2",
+                "-NIR",
+                "-S1",
+                "-treg",
+                "rwa",
+                "-tregtrain",
+                "rwa2022",
+                "--seed",
+                "1600",
+                "-occmodel",
+                "-wd",
+                "0.0000001",
+                "-senbuilds",
+                "-pret",
+                "--biasinit",
+                "0.9407",
+                "--limit1",
+                "5000000",
+                "--limit2",
+                "6000000",
+                "--limit3",
+                "13000000",
+                "--save-dir",
+                "/scratch2/results",
+                "--builtuploss",
+                "True"
+            ]
         }
     ]
 }
