fueled loss function with gbuildings and built-up

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2625,7 +2625,9 @@
                 "--save-dir",
                 "/scratch2/results",
                 "--builtuploss",
-                "True"
+                "True",
+                "--buildinginput",
+                "--segmentationinput"
             ]
         }
     ]
