--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2671,6 +2671,74 @@
                 "1.0",
                 "--twoheadmethod"
             ]
+        },
+        {
+            "name": "train, Stage 1, rwa2022 finetune, neckert, euler, builtuploss, basic",
+            "type": "python",
+            "request": "launch",
+            "program": "run_train.py",
+            "console": "integratedTerminal",
+            "justMyCode": false,
+            "args": [
+                "-S2",
+                "-NIR",
+                "-S1",
+                "-treg",
+                "rwa",
+                "-tregtrain",
+                "rwa2022",
+                "--seed",
+                "1600",
+                "-occmodel",
+                "-wd",
+                "0.0000001",
+                "-senbuilds",
+                "-pret",
+                "--biasinit",
+                "0.9407",
+                "--save-dir",
+                "/scratch2/results",
+                "--builtuploss",
+                "--buildinginput",
+                "--segmentationinput",
+                "--lambda_builtuploss",
+                "1.0",
+                "--basicmethod"
+            ]
+        },
+        {
+            "name": "train, Stage 1, rwa2022 finetune, neckert, euler, builtuploss, twohead",
+            "type": "python",
+            "request": "launch",
+            "program": "run_train.py",
+            "console": "integratedTerminal",
+            "justMyCode": false,
+            "args": [
+                "-S2",
+                "-NIR",
+                "-S1",
+                "-treg",
+                "rwa",
+                "-tregtrain",
+                "rwa2022",
+                "--seed",
+                "1600",
+                "-occmodel",
+                "-wd",
+                "0.0000001",
+                "-senbuilds",
+                "-pret",
+                "--biasinit",
+                "0.9407",
+                "--save-dir",
+                "/scratch2/results",
+                "--builtuploss",
+                "--buildinginput",
+                "--segmentationinput",
+                "--lambda_builtuploss",
+                "1.0",
+                "--twoheadmethod"
+            ]
         }
     ]
 }
