--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2528,7 +2528,7 @@
             ]
         },
         {
-            "name": "eval, rwa, ensemble, neckert2, basicmethod",
+            "name": "eval, rwa, ensemble, neckert, basicmethod, extract buildings, 05",
             "type": "python",
             "request": "launch",
             "program": "run_eval.py",
@@ -2543,15 +2543,42 @@
                 "-treg",
                 "rwa",
                 "--fourseasons",
+                "--builtuploss",
+                "--buildinginput",
+                "--segmentationinput",
                 "--basicmethod",
                 "--resume",
-                "/scratch2/results/euler/So2Sat/basic-1600/last_model.pth",
-                "/scratch2/results/euler/So2Sat/basic-1601/last_model.pth",
-                "/scratch2/results/euler/So2Sat/basic-1602/last_model.pth",
-                "/scratch2/results/euler/So2Sat/basic-1603/last_model.pth",
-                "/scratch2/results/euler/So2Sat/basic-1604/last_model.pth",
+                "/scratch2/results/euler/basic/basic-05/basic-05-1600/last_model.pth",
+                "/scratch2/results/euler/basic/basic-05/basic-05-1601/last_model.pth",
+                "/scratch2/results/euler/basic/basic-05/basic-05-1602/last_model.pth",
+                "/scratch2/results/euler/basic/basic-05/basic-05-1603/last_model.pth",
+                "/scratch2/results/euler/basic/basic-05/basic-05-1604/last_model.pth",
             ]
         },
+        {
+            "name": "eval, rwa, neckert, twohead, extract buildings",
+            "type": "python",
+            "request": "launch",
+            "program": "run_eval.py",
+            "console": "integratedTerminal",
+            "justMyCode": true,
+            "args": [
+                "-occmodel",
+                "-senbuilds",
+                "-S2",
+                "-NIR",
+                "-S1",
+                "-treg",
+                "rwa",
+                "--fourseasons",
+                "--builtuploss",
+                "--buildinginput",
+                "--segmentationinput",
+                "--twoheadmethod",
+                "--resume",
+                "/scratch2/results/euler/twohead/untrained-head/lambda_bu_05/1e-7/last_model.pth",
+            ]
+        },        
         {
             "name": "eval, rwa, ensemble, neckert2, twoheadmethod",
             "type": "python",
