--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2504,7 +2504,7 @@
             ]
         },
         {
-            "name": "eval, PRI, ensemble, neckert2",
+            "name": "eval, RWA, ensemble, neckert2",
             "type": "python",
             "request": "launch",
             "program": "run_eval.py",
@@ -2517,18 +2517,22 @@
                 "-NIR",
                 "-S1",
                 "-treg",
-                "pricp2",
+                "rwa",
                 "--fourseasons",
+                "--builtuploss",
+                "--buildinginput",
+                "--segmentationinput",
+                "--basicmethod",                
                 "--resume",
-                "/scratch2/neckert/checkpoints/POPCORN_PRI_checkpoints/model1/last_model.pth",
-                "/scratch2/neckert/checkpoints/POPCORN_PRI_checkpoints/model2/last_model.pth",
-                "/scratch2/neckert/checkpoints/POPCORN_PRI_checkpoints/model3/last_model.pth",
-                "/scratch2/neckert/checkpoints/POPCORN_PRI_checkpoints/model4/last_model.pth",
-                "/scratch2/neckert/checkpoints/POPCORN_PRI_checkpoints/model5/last_model.pth",
+                // "/scratch2/neckert/checkpoints/POPCORN_RWA_checkpoints/model1/last_model.pth",
+                // "/scratch2/neckert/checkpoints/POPCORN_RWA_checkpoints/model2/last_model.pth",
+                // "/scratch2/neckert/checkpoints/POPCORN_RWA_checkpoints/model3/last_model.pth",
+                // "/scratch2/neckert/checkpoints/POPCORN_RWA_checkpoints/model4/last_model.pth",
+                // "/scratch2/neckert/checkpoints/POPCORN_RWA_checkpoints/model5/last_model.pth",
             ]
         },
         {
-            "name": "eval, rwa, ensemble, neckert, basicmethod, extract buildings, 05",
+            "name": "eval, rwa, ensemble, neckert, basicmethod, extract buildings, 06",
             "type": "python",
             "request": "launch",
             "program": "run_eval.py",
@@ -2548,11 +2552,11 @@
                 "--segmentationinput",
                 "--basicmethod",
                 "--resume",
-                "/scratch2/results/euler/basic/basic-05/basic-05-1600/last_model.pth",
-                "/scratch2/results/euler/basic/basic-05/basic-05-1601/last_model.pth",
-                "/scratch2/results/euler/basic/basic-05/basic-05-1602/last_model.pth",
-                "/scratch2/results/euler/basic/basic-05/basic-05-1603/last_model.pth",
-                "/scratch2/results/euler/basic/basic-05/basic-05-1604/last_model.pth",
+                // "/scratch2/results/euler/basic/basic-adduploss/basic-1600/last_model.pth",
+                "/scratch2/results/euler/basic/basic-adduploss/basic-1601/last_model.pth",
+                // "/scratch2/results/euler/basic/basic-adduploss/basic-1602/last_model.pth",
+                // "/scratch2/results/euler/basic/basic-adduploss/basic-1603/last_model.pth",
+                // "/scratch2/results/euler/basic/basic-adduploss/basic-1604/last_model.pth",
             ]
         },
         {
@@ -2576,7 +2580,7 @@
                 "--segmentationinput",
                 "--twoheadmethod",
                 "--resume",
-                "/scratch2/results/euler/twohead/untrained-head/lambda_bu_05/1e-7/last_model.pth",
+                "/scratch2/results/euler/twohead/untrained-head/untrained-10/last_model.pth",
             ]
         },        
         {
